order-system-helm/spring-cloud/deployment-eureka-server.yaml
# spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: order-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: localhost:5000/eureka-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9102
