order-system-helm/spring-cloud/deployment-gateway-server.yaml
# spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  namespace: order-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - name: gateway-server
          image: roudane/gateway-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9103
