order-system-helm/spring-cloud/service-eureka-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: order-dev
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9102
  type: ClusterIP
